data/derived/comb/progs/unify/prog5849.ml.out
Characters 157-160:
  else [seen] @ (h)) in
                ^^^
Error: This expression has type 'a but an expression was expected of type
         'a list list
       The type variable 'a occurs inside 'a list list
